# nonogram

./: .gitignore  README.md  evaluate.py  inference.py  mcts_2d.py  models_2d.py  pyproject.toml  qnet_N10.pt  qnet_N5.pt  requirements.txt  solve_nonogram.py  train.py  train_alphazero.py  train_parallel.py  utils.py
configs/: alphazero_2d.yaml  alphazero_2d_pretrain_1d.yaml  alphazero_2d_runpod.yaml  board_dqn_10x10.yaml  board_gnn_dqn_10x10.yaml  board_gnn_ppo_10x10.yaml  board_ppo_10x10.yaml  board_transformer_dqn_10x10.yaml  crl_clue_10x10.yaml  crl_her_10x10.yaml  crl_line_clue_10x10.yaml  crl_line_her_10x10.yaml  default.yaml  double_dqn_10x10.yaml  dqn_10x10.yaml  dqn_10x10_super_1d.yaml  dqn_5x5.yaml  dqn_board_2d_rl.yaml  dqn_board_2d_rl_parallel.yaml  dqn_chunking_mlp_10x10.yaml  dqn_chunking_transformer_10x10.yaml  gflownet_10x10.yaml  ppo_10x10.yaml
nonogram/: __init__.py  config.py
nonogram/agents/: __init__.py  base.py  crl.py  double_dqn.py  dqn.py  gflownet.py  ppo.py  registry.py
nonogram/env/: __init__.py  board_env.py  feasibility.py  gflownet_env.py  line_env.py  state.py
nonogram/models/: __init__.py  board_cnn.py  board_cross_attn.py  board_gnn.py  board_transformer.py  cnn.py  deep_crl.py  dueling.py  mlp.py  registry.py  symmetry_gnn.py
nonogram/solvers/: __init__.py  board_solver.py  hybrid_solver.py  line_solver.py  registry.py
nonogram/utils/: __init__.py  puzzle_io.py  (+1 more)
scratch/: debug_solver.py  inspect_checkpoint.py
scripts/: evaluate.py  evaluate_1d.py  inference.py  inference_2d.py  solve.py  train.py  train_parallel.py
